Framework fix / used the new logger methods and removed some white linees for Browser actions class and enhanced logs text